--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,3 +1,4 @@
 # English strings go here for Rails i18n
 en:
-  # my_label: "My label"
+  label_legal_notice: 'Legal Notice'
+  label_data_privacy_policy: 'Data Privacy Policy'
