--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,3 +2,5 @@
 en:
   label_legal_notice: 'Legal Notice'
   label_data_privacy_policy: 'Data Privacy Policy'
+  note_legal_notice: 'Edit your legal notice for this website here'
+  note_data_privacy_policy: 'Edit your data privacy policy for this website here'
