Add privacy consent
A user is required to register with data privacy consent if enabled.

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1,6 +1,11 @@
 # German strings go here for Rails i18n
 de:
   label_legal_notice: 'Impressum'
-  label_data_privacy_policy: 'Datenschutzerklärung'
+  label_data_privacy_policy: 'Datenschutz'
   note_legal_notice: 'Bearbeiten Sie Ihr Impressum hier'
   note_data_privacy_policy: 'Bearbeiten Sie Ihre Datenschutzerklärung hier'
+  note_user_privacy_consent: 'Den Link zu Ihrer Datenschutzerklärung können Sie 
+    als relativen Link einfügen: /data-privacy-policy'
+  label_privacy_consent_text: Einverständniserklärung
+  label_data_privacy_policy_text: Datenschutzerklärung
+  field_privacy_consent: Einverständniserklärung
