Prepare for version 0.1.3
* update README, CHANGELOG, and init.rb
* add all staged files due to server movement

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -9,3 +9,4 @@ de:
   label_privacy_consent_text: Einverständniserklärung
   label_data_privacy_policy_text: Datenschutzerklärung
   field_privacy_consent: Einverständniserklärung
+  label_enable_privacy_consent: Aktiviere die Einverständniserklärung
